--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
 body{
+    background-color: #f1f1f1;
+    font-family: 'Roboto', sans-serif;
+    font-size: 26px;
+    color: #333;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
     overflow: hidden;
-    text-align: center;
-    background: -webkit-gradient(linear, left top, left bottom, from(#431c9e), to(#3f1776));
-    color: cornsilk;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 25px;
+    
 }
